--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.14.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.9"
   },
