--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "element-ui": "^2.4.8",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
